[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]

[project]
name = "vlmc"
version = "0.1.5"
authors = [
  { name="António Leitão", email="aleitao@novaims.unl.pt" },
]
description = "Variable Length Markov Chain"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/antonio-leitao/vlmc"
repository = "https://github.com/antonio-leitao/vlmc"

